Fix vertical alignment of circle buttons

--- a/styles/table-view-cell.less
+++ b/styles/table-view-cell.less
@@ -20,7 +20,7 @@
     width: 18px;
     height: 18px;
     border-radius: 50%;
-    margin: 2px 5px;
+    margin: 4px 5px;
     background: white;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.15), inset 0 2px 5px 0 rgba(0,0,0,0.05);
     cursor: pointer;
